--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
     border-radius: 5px;
     position: fixed;
     top: 1em;
-    left: 50%;
+    /* left: 50%; */
     width: 500px;
-    margin-left: 350px;
+    /* margin-left: 350px; */
     min-height: 600px;
+    right: 1em;
 }
