--- a/templates/index.html
+++ b/templates/index.html
@@ -37,11 +37,9 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script src="/util.js"></script>
-    <script src="/components/score-input.js"></script>
-    <script src="/components/manage-session.js"></script>
-    <script src="/components/manage-players.js"></script>
-    <script src="/components/messages.js"></script>
-    <script src="/components/debug.js"></script>
+    {% for script in components %}
+    <script src="{{script}}"></script>
+    {% endfor %}
     <script src="/app.js"></script>
 </body>
 </html>
