--- a/templates/index.html
+++ b/templates/index.html
@@ -31,10 +31,17 @@
             :matches-possible="matchesPossible"
         ></debug>
         
-        <messages :pop-msg="popMsg">
+        <div class="toast-container position-fixed top-0 end-0 p-3">
+            <bs-toast
+                v-for="message in toasts"
+                :key="message.id"
+                :message="message"
+            />
+        </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="/util.js"></script>
     {% for script in components %}
     <script src="{{script}}"></script>
