--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,10 @@
             :players="players"
             :matches="matches"
         ></manage-session>
+
+        <view-history
+            :player-info="players"
+        />
         
         <debug
             :teams="teams"
@@ -38,6 +42,7 @@
             />
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/min/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
