Self closing components were causing issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 
         <view-history
             :player-info="players"
-        />
+        ></view-history>
         
         <debug
             :teams="teams"
@@ -39,7 +39,7 @@
                 v-for="message in toasts"
                 :key="message.id"
                 :message="message"
-            />
+            ></bs-toast>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/min/moment.min.js"></script>
