Start and end session, show hide based on session state

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
             v-if="isPath('/')"
             :players="players"
             :matches="matches"
+            :session="session"
         ></manage-session>
 
         <view-history
