Added session stats

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
             :players="players"
             :matches="matches"
             :session="session"
+            :num-teams="teams.length"
         ></manage-session>
 
         <view-history
