--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,9 @@
             :matches-possible="matchesPossible"
         ></debug>
 
-        <p><button type="button" class="btn btn-danger" @click="clearStorage" >Clear Storage</button></p>
+        <p><button type="button" class="btn btn-danger" @click="clearStorage" >Clear Storage</button> <button type="button" class="btn btn-primary" @click="exportStorage" >Export</button></p>
+
+        {{data.rawr}}
         
         <div class="toast-container position-fixed top-0 end-0 p-3">
             <bs-toast
@@ -52,11 +54,16 @@
                 :message="message"
             ></bs-toast>
         </div>
+
+        <modal
+            :export-string="exportString"
+        ></modal>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/min/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lz-string@1.5.0/libs/lz-string.min.js"></script>
     <script src="/util.js"></script>
     {% for script in mixins %}<script src="{{script}}"></script>{% endfor %}
     {% for script in components %}<script src="{{script}}"></script>{% endfor %}
